# RoboLights

./: CMakeLists.txt
effects/: Untitled Document  block_build.lua  jitter_bug.lua  random.lua  solid_section.lua  sweep.lua  test_effect.lua
include/: LightEffect.h  RoboLights.h  Segment.h  utility.h
src/: LightEffect.cpp  RoboLights.cpp  Segment.cpp  main.cpp
